...
            <TouchableOpacity style={styles.actionButton}>
              <Text style={styles.actionButtonEmoji}>📝</Text>
              <Text style={styles.actionButtonText}>Log Diary</Text>
            </TouchableOpacity>
            <TouchableOpacity style={styles.actionButton}>
              <Text style={styles.actionButtonEmoji}>📋</Text>
              <Text style={styles.actionButtonText}>List Produce</Text>
            </TouchableOpacity>
            <TouchableOpacity style={styles.actionButton}>
              <Text style={styles.actionButtonEmoji}>🧑‍🤝‍🧑</Text>
              <Text style={styles.actionButtonText}>Attendance</Text>
            </TouchableOpacity>
          </View>
...
